cmake_minimum_required(VERSION 3.20)
project(test_udf2_cmake CXX)
set(CMAKE_CXX_STANDARD 11)
include(lib/udf2.cmake)
add_executable(test_udf2_cmake test_udf2.cpp)
target_include_directories(test_udf2_cmake PRIVATE ${udf2_INCLUDE_DIRS})
target_link_libraries(test_udf2_cmake PRIVATE ${udf2_LINK_LIBS})
